--- a/src/main/resources/templates/assets/add.html
+++ b/src/main/resources/templates/assets/add.html
@@ -31,7 +31,7 @@
           </div>
           <hr style="border:1px solid lightseagreen;border-radius: 5px;"/>
       <div v-show="showPanel" class="panel panel-default">
-          <div class="panel-heading">新增</div>
+          <div class="panel-heading">新增资产</div>
           <form class="form-horizontal">
               <div class="form-group">
                   <div class="col-sm-2 control-label">资产大类</div>
