--- a/src/main/resources/templates/assets/category.html
+++ b/src/main/resources/templates/assets/category.html
@@ -30,7 +30,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
             <a class="btn btn-primary" @click="addCategory"><i class="fa fa-plus"></i>新增类目</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="btn btn-primary" @click="chartShow"><i class="fa fa-map" aria-hidden="true">类目图表</i></a>
+            <a class="btn btn-primary" @click="chartShow"><i class="fa fa-filter" aria-hidden="true"></i>类目图表</i></a>
         </div>
     </div>
             <hr style="border:1px solid lightseagreen;border-radius: 5px;"/>
