--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,23 +9,31 @@
 <div class="panel panel-default" th:fragment="paginatio">
     <div class="panel-heading">系统基本信息</div>
     <div style="padding: 10px 0 20px 10px;">
-        <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统项目简单介绍:</h3>
+        <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统项目简单介绍</h3>
         <ul>
             <li>臻善企业信息管理系统致力为中小型企业定制,操作简单提高工作效率!</li>
             <li>设计之初,就非常注重安全性,采用前后端Hash加盐加密,为企业信息安全管理保驾护航.</li>
             <li>模块逐步完善中,臻善系统,寓意日臻完善!</li>
         </ul>
         <hr/>
-       <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统开发技术介绍:</h3>
+       <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统开发技术介绍</h3>
         <ul>
-            <li>前端:使用AdminLTE模板,JQuery框架,Vue框架,LasyUI的UI框架,BootStrap框架,Font-awesome图标.</li>
-            <li>后端:使用SpringBoot框架,SpringMVC框架,Thymeleaf模板,MyBatis-Plus框架.</li>
-            <li>数据库:使用MySQL,Alibaba的Druid数据库连接池,SQL监控,Redis缓存.</li>
-            <li>安全认证:shiro框架,前一次MD5加盐加密,后端两次加盐加密.</li>
-            <li>开发工具:使用IDEA开发工具,Maven构建项目,Markdown编写项目文档,Lombok简化代码.</li>
+            <li>前端：使用AdminLTE模板,JQuery框架,Vue框架,LasyUI的UI框架,BootStrap框架,Font-awesome图标,JqGrid前端分页</li>
+            <li>后端：使用SpringBoot框架,SpringMVC框架,Thymeleaf模板,MyBatis-Plus框架.</li>
+            <li>数据库：使用MySQL,Alibaba的Druid数据库连接池,SQL监控,Redis缓存.</li>
+            <li>安全认证：Shiro框架,前一次MD5加盐加密,后端两次加盐加密.</li>
+            <li>开发工具：使用IDEA开发工具,Maven构建项目,Markdown编写项目文档,Lombok简化代码.</li>
         </ul>
         <hr/>
-        <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统各个模块介绍:</h3>
+        <h3>&nbsp;&nbsp;&nbsp;臻善企业信息管理系统各个模块介绍</h3>
+        <ul>
+            <li>系统管理模块：</li>
+            <li>人事管理模块：</li>
+            <li>财务管理模块：</li>
+            <li>合同管理模块：</li>
+            <li>项目管理模块：</li>
+            <li>资产管理模块：</li>
+        </ul>
     </div>
 </div>
 </body>
