新增合同系统模块.
Signed-off-by: LiXing <2212640110@qq.com>

--- a/src/main/resources/templates/500.html
+++ b/src/main/resources/templates/500.html
@@ -12,10 +12,7 @@
 </head>
 <body>
      <div align="center" >
-            <h3>非常抱歉呐,系统发生错误了,请联系一下管理员!<a href="/index.html" class="alert-link">5s后自动跳转至首页</a></h3>
+            <h3>非常抱歉呐,系统发生错误了,请联系一下管理员!<a href="/index.html" class="alert-link">跳转至首页</a></h3>
      </div>
-     <script>
-         setTimeout('location.href="/index.html"', 5000);
-     </script>
 </body>
 </html>
